--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <ul>
                     <li>Likes games</li>
                     <li>Perfers some of the older games</li>
-                    <li>Likes reading manga</li>
+                    <li>Likes reading manga wow</li>
                 </ul>
             </div>
         </div>
