--- a/portfolio.html
+++ b/portfolio.html
@@ -5,9 +5,12 @@
     </head>
 
     <body>
+        <div>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_JHe05OTOLJe0Ex18Zo9i-bvWR2G2IUgQ_b1TwSUzVzzhS7P2CimRrJSWUWqrJ2CN0sQ:https://upload.wikimedia.org/wikipedia/en/5/51/Minecraft_cover.png&usqp=CAU">
+        </div>
         <div id="all-contents">
             <nav>
-                <h1>Sheba's Glorious Website</h1>
+                <h1>Link website</h1>
                 <ul id="nav-ul">
                    <li class="nav-li">
                    <a class="nav-a" href="index.html">Home</a>
