--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Link's Amazing Website</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -14,7 +15,7 @@
                 <ul id="nav-ul">
                    <li class="nav-li">
                    <a class="nav-a" href="index.html">Home</a>
-                 </li>
+                </li>
                  <li class="nav-li">
                    <a class="nav-a" href="portfolio.html">Portfolio</a>
                  </li>
