--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,17 +8,18 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: red;
 			font-size: 300%;
 			text-align: center;
 			user-select: none;
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 0px;  /* <--- Change me! */
+			left: 56px;  /* <--- Change me! */
 		}
 		.board{
 			height: 100vh;
+			background-color: yellow;
 		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
@@ -40,7 +41,7 @@
 			var box = jQuery('.box');	// reference to the HTML .box element
 			var board = jQuery('.board');	// reference to the HTML .board element
 			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
-
+			var boardHeight = jQuery(window).height();
 			// Every 50 milliseconds, call the update Function (see below)
 			setInterval(update, 50);
 			
@@ -48,8 +49,9 @@
 			box.on('click', handleBoxClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
+			function moveBoxTo(newPositionX, newPositionY) {
 				box.css("left", newPositionX);
+				box.css('top', newPositionY)
 			}
 
 			// changes the text displayed on the Box
@@ -62,17 +64,33 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
-
-			
+			var positionX = 0;
+			var points = 0;
+			var speed = 10;
+			var positionY = 0;
+			var speedY = 10;
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
 			function update() {
-				
-
+				/* Your Code to Increase positionX by 10 HERE*/
+				positionX = positionX + speed;
+				positionY = positionY + speedY;
+				moveBoxTo(positionX, positionY)
+				if(positionX > boardWidth){
+					speed = speed * -1
+				}
+				if(positionX < 0){
+					speed = speed * -1
+				}
+				if(positionY > boardHeight){
+					speedY = speedY * -1
+				}
+				if(positionY < 0){
+					speedY = speedY * -1
+				}
 			};
 
 			/* 
@@ -81,9 +99,9 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
-
-
+				changeBoxText(points = points + 1);
+				speed = speed * 1.2;
+				speedY = speedY * 1.2;
 			};
 		})();
 	</script>
