--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <!-- Content section -->
         <div class="content">
             <h2>Link Legnon</h2>
-            <p>weird kid</p>
+            <p>Weird kid</p>
             <!-- Interest section-->
             <div id="intrests">
                 <h3>Interests</h3>
