changed to acual gamertag

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>iamblob amazing website</title>
+        <title>iamblob8784 amazing website</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
