--- a/portfolio.html
+++ b/portfolio.html
@@ -36,6 +36,7 @@
                         <li><a href="asd-projects/walker">Walker: Practice user input by animating walking boxes</a></li>
                         <li><a href="asd-projects/image-filtering">Image Filtering: Filter images using loops</a></li>
                         <li><a href="asd-projects/sorting-exercise">Sorting Exercise: An exercise on sorting algorithms</a></li>
+                        <li><a href="asd-projects/dice-app">It a dice app ting</a></li>
                     </ul>
             </div>
          </main>
