--- a/asd-projects/dice-app/index.html
+++ b/asd-projects/dice-app/index.html
@@ -65,7 +65,7 @@ else if(randomNum === 6){
     makeDot(50 , 75 , die) //ting
     makeDot(75 , 75 , die) //ting
 }
-else if(random === 7){
+else if(randomNum === 7){
     makeDot(25 , 25 , die) //ting
     makeDot(50 , 25 , die) //ting
     makeDot(75 , 25 , die) //ting
@@ -74,7 +74,7 @@ else if(random === 7){
     makeDot(75 , 75 , die) //ting
     makeDot(50 , 50 , die)
 }
-else if(random === 8){
+else if(randomNum === 8){
     makeDot(25 , 25 , die) //ting
     makeDot(50 , 25 , die) //ting
     makeDot(75 , 25 , die) //ting
@@ -84,7 +84,7 @@ else if(random === 8){
     makeDot(50 , 75 , die)
     makeDot(50 , 25 , die)
 }
-else if(random === 9){
+else if(randomNum === 9){
     makeDot(25 , 25 , die) //ting
     makeDot(50 , 25 , die) //ting
     makeDot(75 , 25 , die) //ting
